# basis

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml
cmake/: deps.cmake  sanitizers.cmake  warnings.cmake
configs/: contracts.toml  synthetic.toml
docs/: api_integration.md  design.md
docs/bench/: README.md  allocator.md  latency.md  soak.md
fuzz/: CMakeLists.txt  README.md  fuzz_contract_registry.cpp  fuzz_kalshi_parser.cpp  fuzz_polymarket_parser.cpp
fuzz/corpus/kalshi/: delta  snapshot  subscribed
fuzz/corpus/polymarket/: book  price_change
fuzz/corpus/registry/: contracts
scripts/: bench.sh  perf_gate.sh  plot_bench.py
src/: CMakeLists.txt  main.cpp
src/alloc/: bde_arena.cpp  bde_arena.h
src/analytics/: consensus.h  divergence.h  event_study.cpp  event_study.h  lead_lag.cpp  lead_lag.h
src/api/: in_process_session.cpp  in_process_session.h  subscription.h
src/bench/: latency_recorder.cpp  latency_recorder.h  replay_harness.cpp  replay_harness.h  synth_generator.cpp  synth_generator.h
src/core/: bounded_queue.h  counting_resource.h  hash.h  logger.cpp  logger.h  rng.h  sha1.h  time.h  version.h
src/feed/: feed_adapter.h  feed_log.cpp  feed_log.h  kalshi_feed.cpp  kalshi_feed.h  kalshi_parser.cpp  kalshi_parser.h  parse_result.h  polymarket_feed.cpp  polymarket_feed.h  polymarket_parser.cpp  polymarket_parser.h
src/model/: book_delta.h  order_book.cpp  order_book.h  types.h  unified_book.cpp  unified_book.h
src/net/: kalshi_auth.cpp  kalshi_auth.h  ws_client.cpp  ws_client.h
src/normalize/: contract_registry.cpp  contract_registry.h  normalizer.cpp  normalizer.h
tests/: CMakeLists.txt  test_bde_arena.cpp  test_bounded_queue.cpp  test_consensus.cpp  test_contract_registry.cpp  test_counting_resource.cpp  test_divergence.cpp  test_event_study.cpp  test_feed_log.cpp  test_kalshi_auth.cpp  test_kalshi_parser.cpp  test_latency_recorder.cpp  test_lead_lag.cpp  test_normalizer.cpp  test_order_book.cpp  test_polymarket_parser.cpp  test_reconnect.cpp  test_replay_harness.cpp  test_rng.cpp  test_session.cpp  test_sha1.cpp  test_synth_generator.cpp  test_unified_book.cpp
tests/data/: polymarket_book_snapshot.json
tests/support/: flaky_ws_server.cpp  flaky_ws_server.h  test_tls.cpp  test_tls.h
